# simc

./: .gitignore  CMakeLists.txt  README.md  grammer.txt  op_precedence.txt
include/: common.h  debug-api.h  debug.h
include/common/: diag.h  file-utils.h  options.h
include/compiler/: ast-ops.h  ast.h  code-gen.h  compile.h  diag.h  eval.h  scope.h  state-machine.h  token-ops.h  token.h  type.h  utils.h
include/core/: ast-ops.h  ast.h  state-machine.h  token.h
include/driver/: frontend.h
include/init/: debug.h
include/lib/: code-gen.h  dll.h
include/lib/x64/: x64.h  x64_types.h
include/preprocessor/: parser.h  preprocess.h  sym_table.h
lib/: debug.cpp
lib/x64/: arithmetic.cpp  branch.cpp  conditional.cpp  function_gen.cpp  tu.cpp
src/: diagnostic.cpp  entry.cpp  file-utils.cpp  options.cpp
src/core/: state-machine.cpp  token.cpp
src/core/ast/: ast.cpp  debug.cpp  expr.cpp
src/simc/: frontend.cpp  main.cpp
src/simcc/: CMakeLists.txt  analyzer.cpp  ast-debug.cpp  ast.cpp  diagnostic.cpp  evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  scope.cpp  state-machine.cpp  token.cpp  type.cpp
src/simcc/ast/: ast.cpp  debug.cpp  expr.cpp
src/sime/: README.md  directive.cpp  eval.cpp  main.cpp  parser.cpp  preprocess.cpp  sym_table.cpp  utils.cpp
tests/: eval_test1.c  eval_test2.c  eval_test3.c  eval_test4.c  eval_test5.c  eval_test6.c  parser_decl_list.c  parser_test1.c  parser_test3.c  parser_test4.c  pre_test1.c
tests/simcc/: eval_test1.c  eval_test2.c  eval_test4.c  eval_test6.c  lexer_test1.c  parser_test2.c  pointer_test.c
tests/sime/: pre_test1.c  pre_test2.c  pre_test3.c  pre_test4.c
